--- a/app.json
+++ b/app.json
@@ -6,6 +6,11 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
+    "splash": {
+      "image": "./assets/images/logo-no-background.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#FFFACD"
+    },
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -27,13 +32,17 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#232323",
+          "image": "./assets/images/logo-no-background.png",
+          "dark": {
+            "image": "./assets/images/logo-no-background.png",
+            "backgroundColor": "#000000"
+          },
+          "imageWidth": 200
         }
       ]
     ],
+
     "experiments": {
       "typedRoutes": true
     }
