--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
     "react-redux": "^9.1.2",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "expo-updates": "~0.26.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
